# VM-Factory

./: .gitignore  AGENTS.docx  AGENTS.doxs  AGENTS.md  CLAUDE.md  FIRE-AWAY.docx  FIRE-AWAY.doxs  FIRE-AWAY.md  PROGRESS.doxs  PROGRESS.md  PROGRESS.md.docx  README.doxs  README.md  README.md.docx  ai-worker-factory-plan.md  factory-panel-convergence.md  l0-server-vm.sh  lib-l0-core.sh  nodectl.py  package-lock.json  pyproject.toml
docs/reference/: UCC-Standards-and-Layout-Reference.md
docs/roadmap/: UCC-Shared-Roadmap-To-Fork.md
panel/: main.py
panel/static/: style.css
panel/templates/: index.html
panel/templates/partials/: ledger_list.html  node_list.html
scripts/: test.sh
tests/: test-l0-core-args.sh  test-l0-dry-run.sh  test_factory_port.py  test_governing_docs.py  test_idempotent_reset.py  test_library.py  test_panel.py  test_ssh_host_key_pinning.py  test_string_exec_fence.py  test_ucc_events.py  test_vault_fail_closed.py
tests/contracts/: test_conformance.py  test_vendor_export.py
