[project]
name = "vm-factory"
version = "0.1.0"
description = "AI Worker Factory & Node Lifecycle Pipeline Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "uvicorn>=0.51.0",
]

[project.scripts]
nodectl = "nodectl:app"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
]
